# Delivery-System

./: main.py  pyproject.toml  sqlite.db
app/: config.py  database.py  main.py  schemas.py  shipments.json  sqlite.db  utils.py
app/api/: dependencies.py  router.py  shipment.py
app/api/routers/: delivery_partner.py  seller.py  shipment.py
app/api/schemas/: delivery_partner.py  seller.py  shipment.py
app/core/: security.py
app/database/: models.py  redis.py  session.py
app/service/: base.py  delivery_partner.py  seller.py  shipment.py  shipment_event.py  user.py
migrations/: env.py
migrations/versions/: 2559ff55a9b8_add_shipment_event.py  928877bc39b1_create_tables.py  c7d398e442a8_init.py
